[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["daltroizaias <daltroizaias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
